@@ -27,6 +27,7 @@ import com.oheers.fish.utils.ManifestUtil;
 import de.tr7zw.changeme.nbtapi.NBT;
 import dev.dejvokep.boostedyaml.YamlDocument;
 import dev.jorel.commandapi.CommandAPICommand;
+import dev.jorel.commandapi.arguments.EntitySelectorArgument;
 import dev.jorel.commandapi.arguments.IntegerArgument;
 import dev.jorel.commandapi.arguments.MultiLiteralArgument;
 import net.kyori.adventure.audience.Audience;
@@ -44,6 +45,7 @@ import org.jetbrains.annotations.NotNull;
 import java.util.*;
 import java.util.jar.Attributes;
 
+@SuppressWarnings("unchecked")
 public class AdminCommand {
 
     private final HelpMessageBuilder helpMessageBuilder = HelpMessageBuilder.create();
@@ -91,41 +93,52 @@ public class AdminCommand {
                         RarityArgument.create(),
                         FishArgument.create(),
                         new IntegerArgument("amount", 1).setOptional(true),
-                        ArgumentHelper.getPlayerArgument("target").setOptional(true)
+                        new EntitySelectorArgument.ManyPlayers("targets").setOptional(true)
                 )
                 .executes((sender, arguments) -> {
-                    final Fish fish = arguments.getUnchecked("fish");
-                    if (fish == null) {
+                    final Fish initialFish = arguments.getUnchecked("fish");
+                    if (initialFish == null) {
                         return;
                     }
                     final int amount = (Integer) arguments.getOptional("amount").orElse(1);
-                    final Player target = (Player) arguments.getOptional("target").orElseGet(() -> {
-                        if (!(sender instanceof Player player)) {
-                            return null;
+                    final List<Player> targets = (List<Player>) arguments.getOptional("targets").orElseGet(() -> {
+                        if (sender instanceof Player player) {
+                            return List.of(player);
                         }
-                        return player;
+                        return null;
                     });
 
-                    if (target == null) {
+                    if (targets == null) {
                         ConfigMessage.ADMIN_CANT_BE_CONSOLE.getMessage().send(sender);
                         return;
                     }
 
-                    fish.init();
-                    fish.checkFishEvent();
-                    if (fish.hasFishRewards()) {
-                        fish.getFishRewards().forEach(reward -> reward.rewardPlayer(target, target.getLocation()));
+                    for (Player target : targets) {
+                        Fish fish = initialFish.createCopy();
+                        fish.init();
+                        fish.checkFishEvent();
+
+                        if (fish.hasFishRewards()) {
+                            fish.getFishRewards().forEach(reward -> reward.rewardPlayer(target, target.getLocation()));
+                        }
+
+                        fish.setFisherman(target.getUniqueId());
+
+                        final ItemStack fishItem = fish.give(-1);
+                        fishItem.setAmount(amount);
+
+                        FishUtils.giveItem(fishItem, target);
                     }
-                    fish.setFisherman(target.getUniqueId());
-
-                    final ItemStack fishItem = fish.give(-1);
-                    fishItem.setAmount(amount);
-
-                    FishUtils.giveItem(fishItem, target);
 
                     EMFMessage message = ConfigMessage.ADMIN_GIVE_PLAYER_FISH.getMessage();
-                    message.setPlayer(target);
-                    message.setFishCaught(fish.getName());
+
+                    if ("@a".equals(arguments.getRaw("targets"))) {
+                        message.setVariable("{player}", "All Players");
+                    } else {
+                        message.setVariable("{player}", String.join(", ", targets.stream().map(Player::getName).toList()));
+                    }
+
+                    message.setFishCaught(initialFish.getName());
                     message.send(sender);
                 });
     }
@@ -192,28 +205,39 @@ public class AdminCommand {
         );
         return new CommandAPICommand("nbt-rod")
                 .withArguments(
-                        ArgumentHelper.getPlayerArgument("target").setOptional(true)
+                    new EntitySelectorArgument.ManyPlayers("targets").setOptional(true)
                 )
                 .executes(((sender, args) -> {
                     if (!MainConfig.getInstance().requireNBTRod()) {
                         ConfigMessage.ADMIN_NBT_NOT_REQUIRED.getMessage().send(sender);
                         return;
                     }
-                    final Player player = (Player) args.getOptional("target").orElseGet(() -> {
+                    final List<Player> players = (List<Player>) args.getOptional("targets").orElseGet(() -> {
                         if (sender instanceof Player p) {
-                            return p;
+                            return List.of(p);
                         }
                         return null;
                     });
 
-                    if (player == null) {
+                    if (players == null) {
                         ConfigMessage.ADMIN_CANT_BE_CONSOLE.getMessage().send(sender);
                         return;
                     }
 
-                    FishUtils.giveItems(Collections.singletonList(EvenMoreFish.getInstance().getCustomNBTRod()), player);
+                    ItemStack rod = EvenMoreFish.getInstance().getCustomNBTRod();
+
+                    for (Player player : players) {
+                        FishUtils.giveItems(List.of(rod), player);
+                    }
+
                     EMFMessage giveMessage = ConfigMessage.ADMIN_NBT_ROD_GIVEN.getMessage();
-                    giveMessage.setPlayer(player);
+
+                    if ("@a".equals(args.getRaw("targets"))) {
+                        giveMessage.setVariable("{player}", "All Players");
+                    } else {
+                        giveMessage.setVariable("{player}", String.join(", ", players.stream().map(Player::getName).toList()));
+                    }
+
                     giveMessage.send(sender);
                 }));
     }
@@ -227,28 +251,35 @@ public class AdminCommand {
                 .withArguments(
                         BaitArgument.create(),
                         new IntegerArgument("quantity", 1).setOptional(true),
-                        ArgumentHelper.getPlayerArgument("target").setOptional(true)
+                        new EntitySelectorArgument.ManyPlayers("targets").setOptional(true)
                 )
                 .executes((sender, args) -> {
                     final Bait bait = Objects.requireNonNull(args.getUnchecked("bait"));
                     final int quantity = (int) args.getOptional("quantity").orElse(1);
-                    final Player target = (Player) args.getOptional("target").orElseGet(() -> {
+                    final List<Player> targets = (List<Player>) args.getOptional("targets").orElseGet(() -> {
                         if (sender instanceof Player p) {
-                            return p;
+                            return List.of(p);
                         }
                         return null;
                     });
 
-                    if (target == null) {
+                    if (targets == null) {
                         ConfigMessage.ADMIN_CANT_BE_CONSOLE.getMessage().send(sender);
                         return;
                     }
 
-                    ItemStack baitItem = bait.create(target);
-                    baitItem.setAmount(quantity);
-                    FishUtils.giveItems(List.of(baitItem), target);
+                    for (Player target : targets) {
+                        ItemStack baitItem = bait.create(target);
+                        baitItem.setAmount(quantity);
+                        FishUtils.giveItems(List.of(baitItem), target);
+                    }
                     EMFMessage message = ConfigMessage.ADMIN_GIVE_PLAYER_BAIT.getMessage();
-                    message.setPlayer(target);
+
+                    if ("@a".equals(args.getRaw("targets"))) {
+                        message.setVariable("{player}", "All Players");
+                    } else {
+                        message.setVariable("{player}", String.join(", ", targets.stream().map(Player::getName).toList()));
+                    }
                     message.setBait(bait.getId());
                     message.send(sender);
                 });
@@ -572,7 +603,7 @@ public class AdminCommand {
                         ConfigMessage.COMPETITION_ALREADY_RUNNING.getMessage().send(sender);
                         return;
                     }
-                    final int duration = (int) args.getOptional("duration").orElse(1);
+                    final int duration = (int) args.getOptional("duration").orElse(60);
                     final CompetitionType type = (CompetitionType) args.getOptional("competitionType").orElse(CompetitionType.LARGEST_FISH);
                     CompetitionFile file = new CompetitionFile("adminTest", type, duration);
                     Competition competition = new Competition(file);
